--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,6 @@
 
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/main.js"></script>
   </body>
 </html>
