Remove more old stuff; fix Twitter/FB sharing metadata.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,18 +13,18 @@
   <meta name="description" content="{{site.description}}">
 
   <!--Open Graph Related Stuff-->
-  <meta property="og:title" content="3D Scene Generation"/>
-  <meta property="og:url" content="https://3dscenegen.github.io/"/>
+  <meta property="og:title" content="Learning 3D Generative Models"/>
+  <meta property="og:url" content="https://learn3dgen.github.io/"/>
   <meta property="og:description" content="{{site.description}}"/>
-  <meta property="og:site_name" content="3D Scene Generation"/>
+  <meta property="og:site_name" content="Learning 3D Generative Models"/>
   <meta property="og:image" content=""/>
   <meta property="og:image:url" content=""/>
 
   <!--Twitter Card Stuff-->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="3D Scene Generation"/>
-  <meta name="twitter:image" content="https://3dscenegen.github.io/static/img/splash.png">
-  <meta name="twitter:url" content="https://3dscenegen.github.io"/>
+  <meta name="twitter:title" content="Learning 3D Generative Models"/>
+  <meta name="twitter:image" content="https://learn3dgen.github.io/static/img/bg.png">
+  <meta name="twitter:url" content="https://learn3dgen.github.io"/>
   <meta name="twitter:description" content="{{site.description}}"/>
 
   <!-- CSS  -->
